--- a/src/index.css
+++ b/src/index.css
@@ -3,4 +3,15 @@
 body {
   padding: 0;
   margin: 0;
+  max-width: 100vw;
+  overflow-x: hidden;
+  min-height: 100vh;
+  background-color: #111B39;
+  backdrop-filter: blur(10px);
+  font-family: 'Orbitron', sans-serif;
+}
+
+#root {
+  max-width: 100vw;
+  min-height: 100vh;
 }
