--- a/src/index.css
+++ b/src/index.css
@@ -5,13 +5,34 @@ body {
   margin: 0;
   max-width: 100vw;
   overflow-x: hidden;
-  min-height: 100vh;
+  height: 100vh;
   background-color: #111B39;
   backdrop-filter: blur(10px);
   font-family: 'Orbitron', sans-serif;
+  overflow-y: scroll;
 }
 
 #root {
   max-width: 100vw;
   min-height: 100vh;
+}
+
+.flexer {
+  flex-direction: column;
+}
+
+@media (max-width: 1450px) {
+  .custombreaks {
+    flex-direction: column;
+  }
+
+  .flexer {
+    flex-direction: row;
+  }
+}
+
+@media (max-width: 640px) {
+  .flexer {
+    flex-direction: column;
+  }
 }
